# gemini-chat

./: Cargo.toml  README.md  gemini.sh
src/: main.rs
