[package]
name = "gemini-chat"
description = "Simple Rust CLI chat for Gemini AI"
authors = ["Vi+ <vitaliyy@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
clap = { version = "4.5", features = ["derive"] }
